fix featurette-img stretching with width auto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,7 @@ h3 {
 
 .featurette-image {
     background-size: cover;
-    width: 500px;
+    width: auto;
     height: auto;
 }
 
